added documentation on styles
refs #385

Change-Id: I0d51898c80dc5098d9ca5679ffe7e2401b85100e

--- a/ext/styledmap/eu.esdihumboldt.hale.doc.user.views.styledmap/build.properties
+++ b/ext/styledmap/eu.esdihumboldt.hale.doc.user.views.styledmap/build.properties
@@ -3,4 +3,5 @@ bin.includes = META-INF/,\
                images/,\
                html/,\
                toc.views.xml,\
-               toc.gettingstarted.xml
+               toc.gettingstarted.xml,\
+               toc.tasks_data.xml
