--- a/doc/plugins/eu.esdihumboldt.hale.doc.user/build.properties
+++ b/doc/plugins/eu.esdihumboldt.hale.doc.user/build.properties
@@ -2,5 +2,6 @@ bin.includes = plugin.xml,\
                META-INF/,\
                html/,\
                *.xml,\
-               images/
+               images/,\
+               projects/
 
