fixed several build properties files
Change-Id: I0b7917146b60a34126cdf4bdb2c661ae1640e605

--- a/common/plugins/eu.esdihumboldt.hale.common.align/build.properties
+++ b/common/plugins/eu.esdihumboldt.hale.common.align/build.properties
@@ -2,5 +2,6 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                plugin.xml,\
-               icons/
+               icons/,\
+               schema/
 source.. = src/
