added progress message explicitly to splash screen
as before it was displayed also, but seemingly at random
position and with a random color.

Change-Id: Ifc9d19a17f310a7d1caeb6d620b3073692b8f838

--- a/ui/plugins/eu.esdihumboldt.hale.ui.application/plugin.xml
+++ b/ui/plugins/eu.esdihumboldt.hale.ui.application/plugin.xml
@@ -95,6 +95,14 @@
                name="preferenceCustomization"
                value="plugin_customization.ini">
          </property>
+         <property
+               name="startupForegroundColor"
+               value="000000">
+         </property>
+         <property
+               name="startupMessageRect"
+               value="7,262,445,18">
+         </property>
       </product>
    </extension>
    <extension
