--- a/io/plugins/eu.esdihumboldt.hale.io.gml.geometry/.classpath
+++ b/io/plugins/eu.esdihumboldt.hale.io.gml.geometry/.classpath
@@ -3,5 +3,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="C:/Users/Baboo/Documents/hale2/platform/target/org.geotools/org.geotools_8.0-M1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
