first join type transformation implementation
-joins types based on equal properties
-only uses the first value of those properties
-returns all possible combinations (for examle "person address
person,addressId=address,id" would return each correct combination of person
and address, and not one person with several addresses).
-uses displaynames instead of QNames
-no explanation and parameter page

refs #372

Change-Id: I27d4d7561cb829ce03d1a40dadf8012270928cd8

--- a/cst/plugins/eu.esdihumboldt.cst.functions.core/plugin.xml
+++ b/cst/plugins/eu.esdihumboldt.cst.functions.core/plugin.xml
@@ -39,6 +39,12 @@
             function="eu.esdihumboldt.hale.align.merge"
             id="eu.esdihumboldt.cst.functions.core.merge">
       </typeTransformation>
+      <typeTransformation
+            class="eu.esdihumboldt.cst.functions.core.Join"
+            engine="eu.esdihumboldt.align.java"
+            function="eu.esdihumboldt.hale.align.join"
+            id="eu.esdihumboldt.cst.functions.core.join">
+      </typeTransformation>
    </extension>
 
 </plugin>
