split functions doc in a dynamic and dummy alternative
The dynamic documenation is based on the functions available
in the application, the dummy documentation  is for use in the
Infocenter.

Change-Id: I77a7fe84c0245a216493d6ef3383431ead9ddfdd
Reviewed-on: http://gerrit.esdi-community.eu/1071
Tested-by: Jenkins <sitemple@igd.fraunhofer.de>
Reviewed-by: Simon Templer <simon.templer@igd.fraunhofer.de>

--- a/doc/plugins/eu.esdihumboldt.cst.doc.functions/.settings/org.eclipse.pde.core.prefs
+++ b/doc/plugins/eu.esdihumboldt.cst.doc.functions/.settings/org.eclipse.pde.core.prefs
@@ -1,3 +1,4 @@
-#Thu Nov 24 14:46:24 CET 2011
+#Fri Apr 13 16:48:46 CEST 2012
 eclipse.preferences.version=1
+pluginProject.extensions=false
 resolve.requirebundle=false
