added command to en-/disable transformation
Added it to toolbar and main menu.

refs #399

Change-Id: I7565acbac612ef227fedca792ce1b78b3f9a2808
Reviewed-on: http://gerrit.esdi-community.eu/1114
Tested-by: Jenkins <sitemple@igd.fraunhofer.de>
Reviewed-by: Simon Templer <simon.templer@igd.fraunhofer.de>

--- a/ui/plugins/eu.esdihumboldt.hale.ui.application/plugin.xml
+++ b/ui/plugins/eu.esdihumboldt.hale.ui.application/plugin.xml
@@ -175,6 +175,7 @@
                   visible="true">
             </separator>
             <menu
+                  icon="icons/trash.gif"
                   label="Clear">
                <command
                      commandId="eu.esdihumboldt.hale.ui.schema.clear_source"
@@ -196,6 +197,14 @@
             </menu>
             <separator
                   name="HALE.separator3"
+                  visible="true">
+            </separator>
+            <command
+                  commandId="eu.esdihumboldt.hale.ui.instance.toggle_transformation"
+                  style="toggle">
+            </command>
+            <separator
+                  name="HALE.separator4"
                   visible="true">
             </separator>
             <dynamic
@@ -393,6 +402,10 @@
                   label="Add relation..."
                   style="push"
                   tooltip="Add a new relation">
+            </command>
+            <command
+                  commandId="eu.esdihumboldt.hale.ui.instance.toggle_transformation"
+                  style="toggle">
             </command>
          </toolbar>
          <toolbar
