allow canceling the transformation
refs #403

Change-Id: Ie4f31ba946f32a9b7f0dc52ad10a40cc445dceb2

--- a/ui/plugins/eu.esdihumboldt.hale.ui.application/plugin.xml
+++ b/ui/plugins/eu.esdihumboldt.hale.ui.application/plugin.xml
@@ -368,6 +368,14 @@
                   label="Export"
                   style="pulldown">
             </command>
+            <separator
+                  name="eu.esdihumboldt.hale.ui.file.io"
+                  visible="true">
+            </separator>
+            <command
+                  commandId="eu.esdihumboldt.hale.ui.instance.toggle_transformation"
+                  style="toggle">
+            </command>
          </toolbar>
          <toolbar
                id="eu.esdihumboldt.hale.ui.edit"
@@ -402,10 +410,6 @@
                   label="Add relation..."
                   style="push"
                   tooltip="Add a new relation">
-            </command>
-            <command
-                  commandId="eu.esdihumboldt.hale.ui.instance.toggle_transformation"
-                  style="toggle">
             </command>
          </toolbar>
          <toolbar
