--- a/common/plugins/eu.esdihumboldt.hale.common.align/plugin.xml
+++ b/common/plugins/eu.esdihumboldt.hale.common.align/plugin.xml
@@ -80,6 +80,15 @@
             description="Assigns a value to a target property"
             identifier="eu.esdihumboldt.hale.align.assign"
             name="Assign">
+         <sourceProperties>
+            <property
+                  description="Optional anchor. If set, the assignment only is applicable if the anchor has a value."
+                  label="Anchor"
+                  maxOccurrence="1"
+                  minOccurrence="0"
+                  name="anchor">
+            </property>
+         </sourceProperties>
          <targetProperties>
             <property
                   description="The property a value shall be assigned to"
