added network expansion explanation
Also slightly modified other explanations with replacement tables.
Added descriptions for CalculateLength and CalculateArea.

refs #413

Change-Id: Id69ab0b8afbd6b518a8b4883b3348f2d3b4290e3

--- a/cst/plugins/eu.esdihumboldt.cst.functions.geometric/plugin.xml
+++ b/cst/plugins/eu.esdihumboldt.cst.functions.geometric/plugin.xml
@@ -80,6 +80,7 @@
       </propertyFunction>
       <propertyFunction
             category="eu.esdihumboldt.cst.functions.geometric"
+            cellExplanation="eu.esdihumboldt.cst.functions.geometric.NetworkExpansionExplanation"
             description="Creates a buffer on a geometry."
             icon="icons/geometry.png"
             identifier="eu.esdihumboldt.cst.functions.geometric.networkexpansion"
@@ -93,6 +94,8 @@
          </targetProperties>
          <sourceProperties>
             <property
+                  description="The geometry to create a buffer on."
+                  label="Geometry"
                   maxOccurrence="1"
                   minOccurrence="1">
                <geometryCondition></geometryCondition>
@@ -115,6 +118,7 @@
       </propertyFunction>
       <propertyFunction
             category="eu.esdihumboldt.cst.functions.geometric"
+            description="Calculate the length of a geometry"
             icon="icons/geometry.png"
             identifier="eu.esdihumboldt.cst.functions.geometric.calculatelength"
             name="Calculate Length">
@@ -139,6 +143,7 @@
       </propertyFunction>
       <propertyFunction
             category="eu.esdihumboldt.cst.functions.geometric"
+            description="Calculate the area of a geometry"
             icon="icons/geometry.png"
             identifier="eu.esdihumboldt.cst.functions.geometric.calculatearea"
             name="Calculate Area">
