added centroid function definition
refs #364

Change-Id: If46aeb89334d77fd65e81a1448a818f225336b12
Reviewed-on: http://gerrit.esdi-community.eu/1154
Tested-by: Jenkins <sitemple@igd.fraunhofer.de>
Reviewed-by: Simon Templer <simon.templer@igd.fraunhofer.de>

--- a/cst/plugins/eu.esdihumboldt.cst.functions.geometric/plugin.xml
+++ b/cst/plugins/eu.esdihumboldt.cst.functions.geometric/plugin.xml
@@ -118,7 +118,7 @@
       </propertyFunction>
       <propertyFunction
             category="eu.esdihumboldt.cst.functions.geometric"
-            description="Calculate the length of a geometry"
+            description="Calculate the length of a geometry."
             icon="icons/geometry.png"
             identifier="eu.esdihumboldt.cst.functions.geometric.calculatelength"
             name="Calculate Length">
@@ -143,7 +143,7 @@
       </propertyFunction>
       <propertyFunction
             category="eu.esdihumboldt.cst.functions.geometric"
-            description="Calculate the area of a geometry"
+            description="Calculate the area of a geometry."
             icon="icons/geometry.png"
             identifier="eu.esdihumboldt.cst.functions.geometric.calculatearea"
             name="Calculate Area">
@@ -156,6 +156,26 @@
                      allowConversion="true"
                      compatibleClass="java.lang.Double">
                </bindingCondition>
+            </property>
+         </targetProperties>
+         <sourceProperties>
+            <property
+                  maxOccurrence="1"
+                  minOccurrence="1">
+               <geometryCondition></geometryCondition>
+            </property>
+         </sourceProperties>
+      </propertyFunction>
+      <propertyFunction
+            category="eu.esdihumboldt.cst.functions.geometric"
+            description="Calculates the centroid of a given geometry."
+            icon="icons/geometry.png"
+            identifier="eu.esdihumboldt.cst.functions.geometric.centroid"
+            name="Centroid">
+         <targetProperties>
+            <property
+                  maxOccurrence="1"
+                  minOccurrence="1">
             </property>
          </targetProperties>
          <sourceProperties>
@@ -192,6 +212,12 @@
             engine="eu.esdihumboldt.align.java"
             function="eu.esdihumboldt.cst.functions.geometric.calculatearea"
             id="eu.esdihumboldt.cst.functions.geometric.calculatearea">
+      </propertyTransformation>
+      <propertyTransformation
+            class="eu.esdihumboldt.cst.functions.geometric.Centroid"
+            engine="eu.esdihumboldt.align.java"
+            function="eu.esdihumboldt.cst.functions.geometric.centroid"
+            id="eu.esdihumboldt.cst.functions.geometric.centroid">
       </propertyTransformation>
    </extension>
 
