added descriptions for the 3 new functions
refs #364

Change-Id: I922bc47dc54a7c1a6d0449bac29a45b1a2e51705

--- a/cst/plugins/eu.esdihumboldt.cst.functions.geometric/plugin.xml
+++ b/cst/plugins/eu.esdihumboldt.cst.functions.geometric/plugin.xml
@@ -124,6 +124,7 @@
             name="Calculate Length">
          <targetProperties>
             <property
+                  description="The property that shall hold the calculated area"
                   maxOccurrence="1"
                   minOccurrence="1">
                <bindingCondition
@@ -135,6 +136,7 @@
          </targetProperties>
          <sourceProperties>
             <property
+                  description="The given geometry to calculate the area"
                   maxOccurrence="1"
                   minOccurrence="1">
                <geometryCondition></geometryCondition>
@@ -149,6 +151,7 @@
             name="Calculate Area">
          <targetProperties>
             <property
+                  description="The property that shall hold the calculated area"
                   maxOccurrence="1"
                   minOccurrence="1">
                <bindingCondition
@@ -160,6 +163,7 @@
          </targetProperties>
          <sourceProperties>
             <property
+                  description="The given geometry to calculate the area"
                   maxOccurrence="1"
                   minOccurrence="1">
                <geometryCondition></geometryCondition>
@@ -174,12 +178,14 @@
             name="Centroid">
          <targetProperties>
             <property
+                  description="The property that shall hold the point of the geometric center"
                   maxOccurrence="1"
                   minOccurrence="1">
             </property>
          </targetProperties>
          <sourceProperties>
             <property
+                  description="The given geometry to calculate the geometric center"
                   maxOccurrence="1"
                   minOccurrence="1">
                <geometryCondition></geometryCondition>
