added explanation classes for the 3 new functions
refs #364

Change-Id: Ibccd1b2fee695ce39af1a64e4ce7658199a23140
Signed-off-by: Simon Templer <simon.templer@igd.fraunhofer.de>
Reviewed-on: http://gerrit.esdi-community.eu/1170
Tested-by: Jenkins <sitemple@igd.fraunhofer.de>

--- a/cst/plugins/eu.esdihumboldt.cst.functions.geometric/plugin.xml
+++ b/cst/plugins/eu.esdihumboldt.cst.functions.geometric/plugin.xml
@@ -118,6 +118,7 @@
       </propertyFunction>
       <propertyFunction
             category="eu.esdihumboldt.cst.functions.geometric"
+            cellExplanation="eu.esdihumboldt.cst.functions.geometric.CalculateLengthExplanation"
             description="Calculate the length of a geometry."
             icon="icons/geometry.png"
             identifier="eu.esdihumboldt.cst.functions.geometric.calculatelength"
@@ -145,6 +146,7 @@
       </propertyFunction>
       <propertyFunction
             category="eu.esdihumboldt.cst.functions.geometric"
+            cellExplanation="eu.esdihumboldt.cst.functions.geometric.CalculateAreaExplanation"
             description="Calculate the area of a geometry."
             icon="icons/geometry.png"
             identifier="eu.esdihumboldt.cst.functions.geometric.calculatearea"
@@ -172,6 +174,7 @@
       </propertyFunction>
       <propertyFunction
             category="eu.esdihumboldt.cst.functions.geometric"
+            cellExplanation="eu.esdihumboldt.cst.functions.geometric.CentroidExplanation"
             description="Calculates the centroid of a given geometry."
             icon="icons/geometry.png"
             identifier="eu.esdihumboldt.cst.functions.geometric.centroid"
