support for code lists in default attribute editor
refs #418

Change-Id: I9a168bee3954899a44f600266881fc6956782acf

--- a/ui/plugins/eu.esdihumboldt.hale.ui.common.editors/plugin.xml
+++ b/ui/plugins/eu.esdihumboldt.hale.ui.common.editors/plugin.xml
@@ -4,11 +4,10 @@
    <extension
          point="org.eclipse.ui.services">
       <serviceFactory
-            factoryClass="eu.esdihumboldt.hale.ui.common.definition.internal.ServiceFactory">
+            factoryClass="eu.esdihumboldt.hale.ui.common.editors.ServiceFactory">
          <service
-               serviceClass="eu.esdihumboldt.hale.ui.common.definition.DefinitionLabelFactory">
+               serviceClass="eu.esdihumboldt.hale.ui.common.definition.AttributeEditorFactory">
          </service>
       </serviceFactory>
    </extension>
-
 </plugin>
