implemented instance validation with constraints
there are still some problems to solve but basically it's working

refs #410

Change-Id: Ibc78c818f714b8cf4580d2326781fafcfd9d895b
Reviewed-on: http://gerrit.esdi-community.eu/1220
Tested-by: Jenkins <sitemple@igd.fraunhofer.de>
Reviewed-by: Simon Templer <simon.templer@igd.fraunhofer.de>

--- a/ui/plugins/eu.esdihumboldt.hale.ui/plugin.xml
+++ b/ui/plugins/eu.esdihumboldt.hale.ui/plugin.xml
@@ -378,6 +378,9 @@
                serviceClass="eu.esdihumboldt.hale.ui.service.instance.sample.InstanceSampleService">
          </service>
          <service
+               serviceClass="eu.esdihumboldt.hale.ui.service.instance.validation.InstanceValidationService">
+         </service>
+         <service
                serviceClass="eu.esdihumboldt.hale.ui.geometry.service.GeometrySchemaService">
          </service>
       </serviceFactory>
