--- a/common/plugins/eu.esdihumboldt.hale.common.instance/plugin.xml
+++ b/common/plugins/eu.esdihumboldt.hale.common.instance/plugin.xml
@@ -2,6 +2,7 @@
 <?eclipse version="3.4"?>
 <plugin>
    <extension-point id="eu.esdihumboldt.hale.instance.filter" name="Filter definitions" schema="schema/eu.esdihumboldt.hale.instance.filter.exsd"/>
+   <extension-point id="eu.esdihumboldt.hale.instance.validation" name="Instance validator" schema="schema/eu.esdihumboldt.hale.instance.validation.exsd"/>
    <extension
          point="eu.esdihumboldt.hale.io.action">
       <action
